--- a/frontend/src/pages/Register/style.css
+++ b/frontend/src/pages/Register/style.css
@@ -32,3 +32,10 @@
     font-size: 45px;
     margin-bottom: 10px;
 }
+
+.btn-Enter a{
+    text-decoration: none;
+    color:white;
+    padding: 10px;
+    border-radius: 10px;
+}
