--- a/frontend/src/pages/Register/style.css
+++ b/frontend/src/pages/Register/style.css
@@ -1,36 +1,23 @@
 .register-container{
-    width: 100%;
-    max-width: 1120px;
     height: 100vh;
     margin: 0 auto;
-
     display: flex;
     align-items: center;
-    justify-content: center;
-
+    justify-content: space-evenly;
 }
 
-
-.register-container img{
-    margin-right: 50px;
-}
-
-.register-container section.form{
-    width: 100%;
-    max-width: 350px;
-    margin-left: 50px;
-}
-
-.register-container section .logo{
+.logo{
+    width: 50%;
     margin-bottom: 30px;
 }
 
-.register-container section form{
-    margin-top: 20px;
-}
-.register-container section h1{
+ h1{
     font-size: 45px;
     margin-bottom: 10px;
+}
+
+form{
+    margin-top: 10px;
 }
 
 .btn-Enter a{
